--- a/wind_barbs/index.html
+++ b/wind_barbs/index.html
@@ -32,10 +32,10 @@
 
                 // Draw barbs on the canvas
                 let scale = 5
-                let x = [300, 400, 500, 300, 400, 500, 600]
-                let y = [200, 200, 200, 100, 100, 100, 100]
-                let u = [65, 45, 15, 105, 5, 20, 0]
-                let v = [0, 0, 0, 0, 5, 25, 0]
+                let x = [300, 400, 500, 300, 400, 500, 300, 400, 500]
+                let y = [200, 200, 200, 100, 100, 100, 300, 300, 300]
+                let u = [65, 45, 15, 105, 5, 20, 0, 0, -45]
+                let v = [0, 0, 0, 0, 5, 25, 0, 10, 0]
                 for (let i=0; i<x.length; i++) {
                     exports.draw(ctx, x[i], y[i], u[i], v[i],
                         scale=scale)
